# BasicRHI

./: CMakeLists.txt  CMakePresets.json  README.md  resource_states.h  rhi.h  rhi_allocator.cpp  rhi_conversions_dx12.h  rhi_debug.h  rhi_debug_internal.h  rhi_dx12.cpp  rhi_dx12.h  rhi_dx12_casting.h  rhi_dx12_headers.h  rhi_feature_info.h  rhi_helpers.h  rhi_imgui_widgets.cpp  rhi_imgui_widgets.h  rhi_interop.h  rhi_interop_dx12.cpp  rhi_interop_dx12.h  rhi_interop_vulkan.h  rhi_reshape_shared.h  rhi_vulkan.cpp  rhi_vulkan.h  vcpkg.json
ImGuiColorTextEdit/: README.md  TextEditor.cpp
cmake/: BasicRHIConfig.cmake.in
tests/: D3D12AliasingSmoke.cpp  VulkanSmoke.cpp
